--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -56,6 +56,7 @@
     "typechain": "^8.1.1",
     "typescript": "^4.9.4",
     "solidity-docgen": "^0.6.0-beta.36",
-    "bignumber.js": "^9.1.1"
+    "bignumber.js": "^9.1.1",
+    "dotenv": "^16.3.1"
   }
 }
